// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Severity Summary given the message {"critical": 0, "high": 1, "message": "Security scanning detected %{countStart}1%{countEnd} potential vulnerability %{criticalStart}0 critical%{criticalEnd} %{highStart}1 high%{highEnd} and %{otherStart}0 Others%{otherEnd}", "other": 0, "status": ""} interpolates correctly 1`] = `
<span>
  Security scanning detected 
  <strong>
    1
  </strong>
   potential vulnerability 
  <span>
    <span>
      0 critical
    </span>
  </span>
   
  <span>
    <strong
      class="text-danger-600"
    >
      
          1 high
        
    </strong>
  </span>
   and 
  <span>
    <span>
      0 Others
    </span>
  </span>
</span>
`;

exports[`Severity Summary given the message {"critical": 1, "high": 0, "message": "Security scanning detected %{countStart}1%{countEnd} potential vulnerability %{criticalStart}1 critical%{criticalEnd} %{highStart}0 high%{highEnd} and %{otherStart}0 Others%{otherEnd}", "other": 0, "status": ""} interpolates correctly 1`] = `
<span>
  Security scanning detected 
  <strong>
    1
  </strong>
   potential vulnerability 
  <span>
    <strong
      class="text-danger-800"
    >
      
          1 critical
        
    </strong>
  </span>
   
  <span>
    <span>
      0 high
    </span>
  </span>
   and 
  <span>
    <span>
      0 Others
    </span>
  </span>
</span>
`;

exports[`Severity Summary given the message {"critical": 1, "high": 2, "message": "Security scanning detected %{countStart}3%{countEnd} potential vulnerabilities %{criticalStart}1 critical%{criticalEnd} %{highStart}2 high%{highEnd} and %{otherStart}0 Others%{otherEnd}", "other": 0, "status": ""} interpolates correctly 1`] = `
<span>
  Security scanning detected 
  <strong>
    3
  </strong>
   potential vulnerabilities 
  <span>
    <strong
      class="text-danger-800"
    >
      
          1 critical
        
    </strong>
  </span>
   
  <span>
    <strong
      class="text-danger-600"
    >
      
          2 high
        
    </strong>
  </span>
   and 
  <span>
    <span>
      0 Others
    </span>
  </span>
</span>
`;

exports[`Severity Summary given the message {"message": ""} interpolates correctly 1`] = `<span />`;

exports[`Severity Summary given the message {"message": "foo"} interpolates correctly 1`] = `
<span>
  foo
</span>
`;
